--- a/packages/editor-ui/src/plugins/i18n/locales/en.json
+++ b/packages/editor-ui/src/plugins/i18n/locales/en.json
@@ -931,7 +931,7 @@
 	"nodeCreator.triggerHelperPanel.formTriggerDescription": "Runs the flow when an n8n generated webform is submitted",
 	"nodeCreator.triggerHelperPanel.manualTriggerDisplayName": "Manually",
 	"nodeCreator.triggerHelperPanel.manualTriggerDescription": "Runs the flow on clicking a button in n8n",
-	"nodeCreator.triggerHelperPanel.whatHappensNext": "What happens next?",
+	"nodeCreator.triggerHelperPanel.whatHappensNext": "What happens next?11111",
 	"nodeCreator.triggerHelperPanel.selectATrigger": "What triggers this workflow?",
 	"nodeCreator.triggerHelperPanel.selectATriggerDescription": "A trigger is a step that starts your workflow",
 	"nodeCreator.triggerHelperPanel.workflowTriggerDisplayName": "When called by another workflow",
@@ -951,7 +951,7 @@
 	"nodeCreator.aiPanel.webhookTriggerDescription": "Runs the flow when another app sends a webhook",
 	"nodeCreator.aiPanel.manualTriggerDisplayName": "Manually",
 	"nodeCreator.aiPanel.manualTriggerDescription": "Runs the flow on clicking a button in n8n",
-	"nodeCreator.aiPanel.whatHappensNext": "What happens next?",
+	"nodeCreator.aiPanel.whatHappensNext": "What happens next?111111",
 	"nodeCreator.aiPanel.selectATrigger": "Select an AI Component",
 	"nodeCreator.aiPanel.selectATriggerDescription": "A trigger is a step that starts your workflow",
 	"nodeCreator.aiPanel.workflowTriggerDisplayName": "When called by another workflow",
